<resources>
    <string name="app_name">RickAndMorty</string>
    <string name="string_let_s_start">Let\'s Start!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="string_welcome">Welcome!</string>
    <string name="string_hello">Hello!</string>
    <string name="string_status">Status:</string>
    <string name="string_specy">Specy:</string>
    <string name="string_gender">Gender:</string>
    <string name="string_origin">Origin:</string>
    <string name="string_location">Location:</string>
    <string name="string_episodes">Episodes:</string>
    <string name="string_created_at_n_in_api">Created at \n in(API):</string>
</resources>